<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TouchnToy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="editTexttag">editText</string>
    <string name="btnstring_start">Check</string>
    <string name="btnstring_restart">Re-Start</string>
    <string name="btnstring_next">Next</string>
    <string name="btnstring_prev">Prev</string>
	<string name="statictext_guide">Please type a text samples:</string>
	<string name="statictext_nobtn"></string>
	<string name="statictext_start">Recording</string>
	<string name="statictext_stop">Stopped!</string>
	<string name="statictext_process"></string>
	<string name="statictext_count">Sample: </string>
	<string name="statictext_counttmp">Count: </string>
	<string name="blankstring"></string>
	<string name="statictext_countinit">Sample: 1</string>
	<string name="statictext_counttmpinit">Count: 0</string>
	<string name="char_a_upper">A</string>
	<string name="char_a_lower">a</string>
	<string name="char_b_upper">B</string>
	<string name="char_b_lower">b</string>
	<string name="char_c_upper">C</string>
	<string name="char_c_lower">c</string>
	<string name="char_d_upper">D</string>
	<string name="char_d_lower">d</string>
	<string name="char_e_upper">E</string>
	<string name="char_e_lower">e</string>
	<string name="char_f_upper">F</string>
	<string name="char_f_lower">f</string>
	<string name="char_g_upper">G</string>
	<string name="char_g_lower">g</string>
	<string name="char_h_upper">H</string>
	<string name="char_h_lower">h</string>
	<string name="char_i_upper">I</string>
	<string name="char_i_lower">i</string>
	<string name="char_j_upper">J</string>
	<string name="char_j_lower">j</string>
	<string name="char_k_upper">K</string>
	<string name="char_k_lower">k</string>
	<string name="char_l_upper">L</string>
	<string name="char_l_lower">l</string>
	<string name="char_m_upper">M</string>
	<string name="char_m_lower">m</string>
	<string name="char_n_upper">N</string>
	<string name="char_n_lower">n</string>
	<string name="char_o_upper">O</string>
	<string name="char_o_lower">o</string>
	<string name="char_p_upper">P</string>
	<string name="char_p_lower">p</string>
	<string name="char_q_upper">Q</string>
	<string name="char_q_lower">q</string>
	<string name="char_r_upper">R</string>
	<string name="char_r_lower">r</string>
	<string name="char_s_upper">S</string>
	<string name="char_s_lower">s</string>
	<string name="char_t_upper">T</string>
	<string name="char_t_lower">t</string>
	<string name="char_u_upper">U</string>
	<string name="char_u_lower">u</string>
	<string name="char_v_upper">V</string>
	<string name="char_v_lower">v</string>
	<string name="char_w_upper">W</string>
	<string name="char_w_lower">w</string>
	<string name="char_x_upper">X</string>
	<string name="char_x_lower">x</string>
	<string name="char_y_upper">Y</string>
	<string name="char_y_lower">y</string>
	<string name="char_z_upper">Z</string>
	<string name="char_z_lower">z</string>
	<string name="sym_num0">0</string>
	<string name="sym_num1">1</string>
	<string name="sym_num2">2</string>
	<string name="sym_num3">3</string>
	<string name="sym_num4">4</string>
	<string name="sym_num5">5</string>
	<string name="sym_num6">6</string>
	<string name="sym_num7">7</string>
	<string name="sym_num8">8</string>
	<string name="sym_num9">9</string>
	<string name="sym_dot">.</string>
	<string name="sym_comma">,</string>
	<string name="sym_dash">-</string>
	<string name="sym_apostrophe">\'</string>
	<string name="sym_exclam">!</string>
	<string name="sym_atmark">\@</string>
	<string name="sym_number">#</string>
	<string name="sym_tilde">~</string>
	<string name="sym_underscore">_</string>
	<string name="sym_caret">^</string>
	<string name="sym_heart">♥</string>
	<string name="sym_diamond">♦</string>
	<string name="sym_fcircle">•</string>
	<string name="sym_fsquare">■</string>
	<string name="sym_asterisk">*</string>
	<string name="sym_openparenthese">(</string>
	<string name="sym_closeparenthese">)</string>
	<string name="sym_grave">`</string>
	<string name="sym_acute">´</string>
	<string name="sym_quote">\"</string>
	<string name="sym_colon">:</string>
	<string name="sym_semicolon">;</string>
	<string name="sym_degree">°</string>
	<string name="sym_question">\?</string>
	<string name="sym_plus">+</string>
	<string name="sym_times">×</string>
	<string name="sym_divide">÷</string>
	<string name="sym_equal">=</string>
	<string name="sym_leftanglebracket">&lt;</string>
	<string name="sym_rightanglebracket">&gt;</string>
	<string name="sym_openbrace">{</string>
	<string name="sym_closebrace">}</string>
	<string name="sym_openbracket">[</string>
	<string name="sym_closebracket">]</string>
	<string name="sym_dollar">$</string>
	<string name="sym_percent">%</string>
	<string name="sym_ampersand">&amp;</string>
	<string name="sym_uparrow">↑</string>
	<string name="sym_downarrow">↓</string>
	<string name="sym_leftarrow">←</string>
	<string name="sym_rightarrow">→</string>
	<string name="sym_uptriangle">▲</string>
	<string name="sym_downtriangle">▼</string>
	<string name="sym_lefttriangle">◄</string>
	<string name="sym_righttrianle">►</string>
	<string name="sym_backslash">\\</string>
	<string name="sym_vertline">|</string>
	<string name="sym_slash">/</string>
	<string name="sym_downquestion">¿</string>
	<string name="sym_downexclam">¡</string>
	<string name="sym_funny1">^^</string>
	<string name="sym_funny2">^_^</string>
	<string name="sym_funny3">=.=</string>
	<string name="sym_funny4">T.T</string>
	<string name="sym_funny5">T_T</string>
	<string name="char_shifttaglower">lower</string>
	<string name="char_shifttagupper">UPPER</string>
	<string name="char_shifttagupper1">UPPER1</string>
	<string name="char_space">space</string>
	<string name="char_spacetag">&#32;</string>
	<string name="char_enter">&#8629;</string>
	<string name="char_entertag">&#10;</string>
	<string name="char_back">&#8678;</string>
	<string name="char_backtag">Back</string>
	<string name="char_sym">12#</string>
	<string name="sym_char">abc</string>
	<string name="key_back">&#8678;</string>
	<string name="key_shift">&#8679;</string>
	<string name="key_enter">&#8629;</string>
	<string name="key_enter_large">↵</string>
	
</resources>
